--- a/MMOSCG.html
+++ b/MMOSCG.html
@@ -1,8 +1,11 @@
 <html>
 <head>
     <title> WebSchool</title>
+    /*<link rel="stylesheet" type="text/css" href="style.css">*/
+    <img src="Logo.png"/>
 </head>
 <body>
+    <div class="nav">
     <ul>
         <li>Home</li>
             <h1> War and its effect on education </h1>
@@ -33,5 +36,6 @@
     </ul>
     
     <footer>**http://www.savethechildren.org/site/apps/nlnet/content2.aspx?c=8rKLIXMGIpI4E&b=8943305&ct=14201753&notoc=1</footer>
+    </div>
 </body>
 </html>
