Fikset noen feil

--- a/MMOSCG.html
+++ b/MMOSCG.html
@@ -2,13 +2,14 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>WebSchool</title>
 		<link rel="stylesheet" type="text/css" href="main.css">
 		<script type="text/JavaScript" src="Scroll.js"></script>
 		<link href="img/icon.png" type="image/png" rel="icon">
 		<link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet'>
 	</head>
-	<body>
+	<body onscroll="MoveNavBar('nav',150)">
 		<header>
 			<img src="img/Logo.png" alt="Firmaets logo" class="logo"></img>
 			<h1 id="Title">WebSchool</h1>
