--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			</div>
 			<span class="header-text">WebSchool</span>
 		</header>
-		<nav>
+		<nav class="navbar">
 			<a class="navbar-item" href="#">NAV-1</a>
 			<a class="navbar-item" href="#">NAV-2</a>
 			<a class="navbar-item" href="#">NAV-3</a>
