--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<link href="img/icon.png" type="image/png" rel="icon">
 		<link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet'>
 	</head>
-	<body onscroll="MoveNavBar('nav',150)">
-		<header class="header">
+	<body onscroll="MoveNavBar('nav', 'header')">
+		<header class="header" id="header">
 			<div class="header-item logo">
 				<img src="img/Logo.png" alt="Firmaets logo" class="header-logo"></img>
 			</div>
