La til funksjonalitet til nav

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<span class="header-text">WebSchool</span>
 		</header>
 		<nav class="navbar">
-			<a class="navbar-item" href="#">NAV-1</a>
-			<a class="navbar-item" href="#">NAV-2</a>
-			<a class="navbar-item" href="#">NAV-3</a>
+			<a class="navbar-item" onclick="ScrollToPoss(0, 1)">Backround</a>
+			<a class="navbar-item" onclick="ScrollToPoss(1500, 1)">Our Aim</a>
+			<a class="navbar-item" onclick="ScrollToPoss(4600, 1)">The Solution</a>
 		</nav>
 		<section class="content">
 			<article class="article container">
