--- a/index.html
+++ b/index.html
@@ -23,39 +23,37 @@
 		</nav>
 		<section class="content">
 			<article class="article container">
-				<h1>Background</h1>
-					<h2>War and its effect on education</h2>
-						<img src="img/school-49.jpg"/>
-						<p>“Education is the most powerful weapon which you can use to change the world." Nelson Mandela</p>
-						<p> Before the start of the civil war in March 2011, Syria was a country that was capable of providing for its people, 
-						with a rate of school enrollment of almost 100%. Nowadays, due to armed groups targeting schools, 
-						schoolchildren, and teachers as military strategy, there are almost 2.8 million children out of school.</p>
-				<h1>Our Aim</h1>
+                <h2>Background: War and its effect on education</h2>
+                <img src="img/school-49.jpg"/>
+                <p>“Education is the most powerful weapon which you can use to change the world." Nelson Mandela</p>
+                <p> Before the start of the civil war in March 2011, Syria was a country that was capable of providing for its people, 
+                with a rate of school enrollment of almost 100%. Nowadays, due to armed groups targeting schools, 
+                schoolchildren, and teachers as military strategy, there are almost 2.8 million children out of school.</p>
 			</article>
 			<article class="article container">
-					<h2> Your future in the palm of your hands </h2>
-					<img src="img/cell-phone-in-hand.jpg"/>
-					<p> Our aim is to provide education in the form of a Self-Learning Programme 
-					designed to encourage children to continue studying at home, in community 
-					learning centres and even abroad, using the self-learning materials where 
-					possible. It is provided in the form of an app to make learning easier and fun. 
-					They will have the possibility to get the same subjects they were going to 
-					be taught at their own schools, and the app is developed so it adapts to the 
-					users own level of knowledge. In this way, the students will be provided the 
-					correct level of dificulty and be challenged accordingly, to encourage our 
-					users to continue using the app until they fulfill the course.</p>
-					<img src="img/world-kids.jpg"/>
+                <h2> Your future in the palm of your hands </h2>
+                <img src="img/cell-phone-in-hand.jpg"/>
+                <p> Our aim is to provide education in the form of a Self-Learning Programme 
+                designed to encourage children to continue studying at home, in community 
+                learning centres and even abroad, using the self-learning materials where 
+                possible. It is provided in the form of an app to make learning easier and fun. 
+                They will have the possibility to get the same subjects they were going to 
+                be taught at their own schools, and the app is developed so it adapts to the 
+                users own level of knowledge. In this way, the students will be provided the 
+                correct level of dificulty and be challenged accordingly, to encourage our 
+                users to continue using the app until they fulfill the course.</p>
+                <img src="img/world-kids.jpg"/>
 			</article>
 			<article class="article container">
 				<h1>The solution</h1>
 					<!--Forklaring på hvorfor en app er bra kan gå her-->
 					<h2> What do we offer? </h2>
-						<p>In addition to mathematics, science, geography, users will have access 
-						to lectures in arabic language and English. We also provide subjects that 
-						were instrinsic to the Syrian system before they were taken out of the 
-						curriculum or modified.** Amoung them: national education, social studies, 
-						history, artistic composition education, philosophy, psychology and Islamic 
-						and Christian religious education.</p>
+                    <p>In addition to mathematics, science, geography, users will have access 
+                    to lectures in arabic language and English. We also provide subjects that 
+                    were instrinsic to the Syrian system before they were taken out of the 
+                    curriculum or modified.** Amoung them: national education, social studies, 
+                    history, artistic composition education, philosophy, psychology and Islamic 
+                    and Christian religious education.</p>
 			</article>
 			<article class="article container">
 				<h1>About Us</h1>
