--- a/index.html
+++ b/index.html
@@ -73,12 +73,10 @@
 					</ul>
 			</article>
 		</section>
-		<div class="fixed-btn-container">
-			<button class="fixed-btn" role="button" onclick="ScrollToPoss(0, 1)">&uarr;</button>
-		</div>
 		<footer>
 			<a href="http://www.savethechildren.org/site/apps/nlnet/content2.aspx?c=8rKLIXMGIpI4E&b=8943305&ct=14201753&notoc=1">savethechildren.org</a>
+			<a href="#" onclick="ScrollToPoss(0, 1)">To the top</a>
 			<a href="http://www.oosci-mena.org/uploads/1/wysiwyg/150527_CAC_for_Syrian_children_report_final.pdf">oosci-mena.org</a>
-		</footer> 
+		</footer>
 	</body>
 </html>
