--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			</article>
 			<article class="article container">
                 <h2> Your future in the palm of your hands </h2>
-                <img src="img/cell-phone-in-hand.jpg"/>
+                <img src="img/cell-phone-in-hand.jpg" title="Cell phone in hand" width"150" height="220" />/>
                 <p> Our aim is to provide education in the form of a Self-Learning Programme 
                 designed to encourage children to continue studying at home, in community 
                 learning centres and even abroad, using the self-learning materials where 
