Endret bilde størrelsene

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<section class="content">
 			<article class="article container">
                 <h2>Background: War and its effect on education</h2>
-                <img src="img/school-49.jpg"/>
+                <img src="img/school-49.jpg"title="Books" width"150" height="220" />
                 <p>“Education is the most powerful weapon which you can use to change the world." Nelson Mandela</p>
                 <p> Before the start of the civil war in March 2011, Syria was a country that was capable of providing for its people, 
                 with a rate of school enrollment of almost 100%. Nowadays, due to armed groups targeting schools, 
@@ -32,7 +32,7 @@
 			</article>
 			<article class="article container">
                 <h2> Your future in the palm of your hands </h2>
-                <img src="img/cell-phone-in-hand.jpg" title="Cell phone in hand" width"150" height="220" />/>
+                <img src="img/cell-phone-in-hand.jpg" title="Cell phone in hand" width"150" height="220" />
                 <p> Our aim is to provide education in the form of a Self-Learning Programme 
                 designed to encourage children to continue studying at home, in community 
                 learning centres and even abroad, using the self-learning materials where 
@@ -42,7 +42,7 @@
                 users own level of knowledge. In this way, the students will be provided the 
                 correct level of dificulty and be challenged accordingly, to encourage our 
                 users to continue using the app until they fulfill the course.</p>
-                <img src="img/world-kids.jpg"/>
+                <img src="img/world-kids.jpg" title="The earth and kids" width"150" height="220" />
 			</article>
 			<article class="article container">
 				<h1>The solution</h1>
