liten hotfix for bedre side-by-side med flex

--- a/index.html
+++ b/index.html
@@ -11,37 +11,39 @@
 	</head>
 	<body onscroll="MoveNavBar('nav', 'header')">
 
-		<header class="header" id="header">
-			<div class="header-item logo">
+		<header class="flex-container header" id="header">
+			<div class="flex-item header-item logo">
 				<img src="img/Logo.png" alt="Firmaets logo" class="header-logo">
 			</div>
-			<span class="header-text">WebSchool</span>
+			<span class="flex-item header-text">WebSchool</span>
 		</header>
-		<nav class="navbar">
-			<a class="navbar-item" onclick="ScrollToPoss(0, 1)">Backround</a>
-			<a class="navbar-item" onclick="ScrollToPoss(1500, 1)">Our Aim</a>
-			<a class="navbar-item" onclick="ScrollToPoss(4600, 1)">The Solution</a>
+		<nav class="flex-container navbar">
+			<a class="flex-item navbar-item" onclick="ScrollToPoss(0, 1)">Backround</a>
+			<a class="flex-item navbar-item" onclick="ScrollToPoss(1500, 1)">Our Aim</a>
+			<a class="flex-item navbar-item" onclick="ScrollToPoss(4600, 1)">The Solution</a>
 		</nav>
 
 		<section class="content">
 			<article class="article">
-                <div class="article-row">
-                    <div class="article-segment">
+
+                <div class="flex-container article-row">
+                    <div class="flex-item article-item">
                         <h1>War and its effect on education</h1>
                         <p>“Education is the most powerful weapon which you can use to change the world." Nelson Mandela</p>
                         <p> Before the start of the civil war in March 2011, Syria was a country that was capable of providing for its people,
                         with a rate of school enrollment of almost 100%. Nowadays, due to armed groups targeting schools,
                         schoolchildren, and teachers as military strategy, there are almost 2.8 million children out of school.</p>
                     </div>
-                    <div class="article-segment">
+                    <div class="flex-item article-item">
                         <img src="img/school-49.jpg" class="article-img">
                     </div>
                 </div>
-                <div class="article-row">
-                    <div class="article-segment">
+
+                <div class="flex-container article-row">
+                    <div class="flex-item article-item">
                         <img src="img/cell-phone-in-hand.jpg" class="article-img">
                     </div>
-                    <div class="article-segment">
+                    <div class="flex-item article-item">
                         <h1> Your future in the palm of your hands </h1>
                         <p> Our aim is to provide education in the form of a Self-Learning Programme
                         designed to encourage children to continue studying at home, in community
@@ -54,8 +56,9 @@
                         users to continue using the app until they fulfill the course.</p>
                     </div>
                 </div>
-                <div class="article-row">
-                    <div class="article-segment">
+
+                <div class="flex-container article-row">
+                    <div class="flex-item article-item">
                         <h1> What do we offer? </h1>
                         <p>In addition to mathematics, science, geography, users will have access
                         to lectures in arabic language and English. We also provide subjects that
@@ -64,12 +67,10 @@
                         history, artistic composition education, philosophy, psychology and Islamic
                         and Christian religious education.</p>
                     </div>
-                    <div class="article-segment">
+                    <div class="flex-item article-item">
                         <img src="img/world-kids.jpg" class="article-img">
                     </div>
                 </div>
-
-				<h1>About Us</h1>
 				<h2>Headquarters</h2>
 					<p>Ingens vei 0, Oslo, 0000 - Oslo, Norway.</p>
 				<h2>Web Developers:</h2>
@@ -84,7 +85,6 @@
 					<li>Martin Hansen. Student number:</li>
 					<li>Silje Bjørknes. Student number:</li>
 				</ul>
-
 			</article>
 		</section>
 
