eksempel på hvordan man kan fikse footer litt

--- a/index.html
+++ b/index.html
@@ -88,10 +88,35 @@
 			</article>
 		</section>
 
-		<footer>
-			<a href="http://www.savethechildren.org/site/apps/nlnet/content2.aspx?c=8rKLIXMGIpI4E&b=8943305&ct=14201753&notoc=1">savethechildren.org</a>
-			<a href="#" onclick="ScrollToPoss(0, 1)">To the top</a>
-			<a href="http://www.oosci-mena.org/uploads/1/wysiwyg/150527_CAC_for_Syrian_children_report_final.pdf">oosci-mena.org</a>
+		<footer class="footer">
+			<div class="flex-container footer-row">
+				<div class="flex-item footer-item">
+					<h2>Headquarters</h2>
+					<ul>
+						<li><span>Ingens vei 0, Oslo, 0000 - Oslo, Norway.</span></li>
+						<li><a href="http://www.savethechildren.org/site/apps/nlnet/content2.aspx?c=8rKLIXMGIpI4E&b=8943305&ct=14201753&notoc=1">savethechildren.org</a></li>
+						<li><a href="http://www.oosci-mena.org/uploads/1/wysiwyg/150527_CAC_for_Syrian_children_report_final.pdf">oosci-mena.org</a></li>
+					</ul>
+					<ul>
+						<li><a href="#" onclick="ScrollToPoss(0, 1)">To the top</a></li>
+					</ul>
+				</div>
+				<div class="flex-item footer-item">
+					<h2>Web Developers:</h2>
+					<ul>
+						<li>Benjamin Østgang. Student number:</li>
+						<li>Erik Snilsberg. Student number:</li>
+						<li>Emil Jensen. Student number:</li>
+						<li>Fredrik Stokkebryn. Student number:</li>
+						<li>Kristoffer Holm. Student number:</li>
+						<li>Julie Nilsen. Student number:</li>
+						<li>Marcus Gullerud. Student number:</li>
+						<li>Martin Hansen. Student number:</li>
+						<li>Silje Bjørknes. Student number:</li>
+					</ul>
+				</div>
+			</div>
+
 		</footer>
 	</body>
 </html>
