Oppdatert JS med bedre ScrollFunkjon

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 		</header>
 		<nav class="flex-container navbar">
 			<a class="flex-item navbar-item" onclick="ScrollToPoss(0, 1)">Backround</a>
-			<a class="flex-item navbar-item" onclick="ScrollToPoss(1500, 1)">Our Aim</a>
-			<a class="flex-item navbar-item" onclick="ScrollToPoss(4600, 1)">The Solution</a>
+			<a class="flex-item navbar-item" onclick="ScrollToPoss('Aim', 1)">Our Aim</a>
+			<a class="flex-item navbar-item" onclick="ScrollToPoss('Solution', 1)">The Solution</a>
 		</nav>
 
 		<section class="content">
@@ -28,7 +28,7 @@
 
                 <div class="flex-container article-row">
                     <div class="flex-item article-item">
-                        <h1>War and its effect on education</h1>
+                        <h1 id="Backround">War and its effect on education</h1>
                         <p>“Education is the most powerful weapon which you can use to change the world." Nelson Mandela</p>
                         <p> Before the start of the civil war in March 2011, Syria was a country that was capable of providing for its people,
                         with a rate of school enrollment of almost 100%. Nowadays, due to armed groups targeting schools,
@@ -44,7 +44,7 @@
                         <img src="img/cell-phone-in-hand.jpg" class="article-img">
                     </div>
                     <div class="flex-item article-item">
-                        <h1> Your future in the palm of your hands </h1>
+                        <h1 id="Aim"> Your future in the palm of your hands </h1>
                         <p> Our aim is to provide education in the form of a Self-Learning Programme
                         designed to encourage children to continue studying at home, in community
                         learning centres and even abroad, using the self-learning materials where
@@ -59,7 +59,7 @@
 
                 <div class="flex-container article-row">
                     <div class="flex-item article-item">
-                        <h1> What do we offer? </h1>
+                        <h1 id="Solution"> What do we offer? </h1>
                         <p>In addition to mathematics, science, geography, users will have access
                         to lectures in arabic language and English. We also provide subjects that
                         were instrinsic to the Syrian system before they were taken out of the
