La til studennummere

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<span class="flex-item header-text">WebSchool</span>
 		</header>
 		<nav class="flex-container navbar">
-			<a class="flex-item navbar-item" onclick="ScrollToPoss(0, 1)">Backround</a>
+			<a class="flex-item navbar-item" onclick="ScrollToPoss(0, 1)">Background</a>
 			<a class="flex-item navbar-item" onclick="ScrollToPoss('Aim', 1)">Our Aim</a>
 			<a class="flex-item navbar-item" onclick="ScrollToPoss('Solution', 1)">The Solution</a>
 		</nav>
@@ -91,19 +91,18 @@
 				<div class="flex-item footer-item">
 					<h2>Web Developers:</h2>
 					<ul>
-						<li>Benjamin Østgang. Student number:</li>
-						<li>Erik Snilsberg. Student number:</li>
-						<li>Emil Jensen. Student number:</li>
-						<li>Fredrik Stokkebryn. Student number:</li>
-						<li>Kristoffer Holm. Student number:</li>
-						<li>Julie Nilsen. Student number:</li>
-						<li>Marcus Gullerud. Student number:</li>
-						<li>Martin Hansen. Student number:</li>
-						<li>Silje Bjørknes. Student number:</li>
+						<li>Benjamin Østvang Abert. Student number: s325877</li>
+						<li>Erik Snilsberg. Student number: s325872</li>
+						<li>Emil Jensen. Student number: s315610</li>
+						<li>Fredrik Stokkebryn. Student number: s325870</li>
+						<li>Kristoffer Holm. Student number: s325884</li>
+						<li>Julie Nilsen. Student number: s326317</li>
+						<li>Marcus Gullerud. Student number: s325888</li>
+						<li>Martin Hansen. Student number: s326189</li>
+						<li>Silje Bjørknes. Student number: s320752</li>
 					</ul>
 				</div>
 			</div>
-
 		</footer>
 	</body>
 </html>
