--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
                 <div class="flex-container article-row">
                     <div class="flex-item article-item">
                         <h1 id="Backround">War and its effect on education</h1>
+                        
+                        <p>"العلم أقوى سلاح لتغيير العالم"</p>
                         <p>“Education is the most powerful weapon which you can use to change the world." Nelson Mandela</p>
+                        
+                        <p> We believe that children are the future and education is the key to a good one. </p>
+
                         <p> Before the start of the civil war in March 2011, Syria was a country that was capable of providing for its people, with a rate of school enrollment of almost 100%. Nowadays, due to armed groups targeting schools, schoolchildren, and teachers as military strategy, there are almost 2.8 million children out of school.*</p>
                     </div>
                     <div class="flex-item article-item">
