--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 		</section>
 
 		<footer class="footer">
-			<div class="flex-container footer-row">
-				<div class="flex-item footer-item">
+			<div class="flex-foot-container footer-row">
+				<div class="flex-item">
 					<h2>Headquarters</h2>
 					<ul>
 						<li><span>Ingens vei 0, Oslo, 0000 - Oslo, Norway.</span></li>
@@ -88,18 +88,39 @@
 						<li><a href="#" onclick="ScrollToPoss(0, 1)">To the top</a></li>
 					</ul>
 				</div>
-				<div class="flex-item footer-item">
+				<div class="flex-item">
 					<h2>Web Developers:</h2>
 					<ul>
-						<li>Benjamin Østvang Abert. Student number: s325877</li>
-						<li>Erik Snilsberg. Student number: s325872</li>
-						<li>Emil Jensen. Student number: s315610</li>
-						<li>Fredrik Stokkebryn. Student number: s325870</li>
-						<li>Kristoffer Holm. Student number: s325884</li>
-						<li>Julie Nilsen. Student number: s326317</li>
-						<li>Marcus Gullerud. Student number: s325888</li>
-						<li>Martin Hansen. Student number: s326189</li>
-						<li>Silje Bjørknes. Student number: s320752</li>
+						<li>
+                            Benjamin Østvang Abert. Student number: s325877
+                        </li>
+						<li>
+                            Erik Snilsberg. Student number: s325872
+                        </li>
+						<li>
+                            Emil Jensen. Student number: s315610
+                        </li>
+						<li>
+                            Fredrik Stokkebryn. Student number: s325870
+                        </li>
+						<li>
+                            Kristoffer Holm. Student number: s325884
+                        </li>
+						<li>
+                            Julie Nilsen. Student number: s326317
+                        </li>
+						<li>
+                            Marcus Gullerud. Student number: s325888
+                        </li>
+						<li>
+                            Martin Hansen. Student number: s326189
+                        </li>
+						<li>
+                            Silje Bjørknes. Student number: s320752
+                        </li>
+                        <li>
+                            Mariah Bt. Student number: 
+                        </li>
 					</ul>
 				</div>
 			</div>
