--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
                             Silje Bjørknes. Student number: s320752
                         </li>
                         <li>
-                            Mariah Bt. Student number: 
+                            Mariha Kayo Bati. Student number: 
+                            s326165
                         </li>
 					</ul>
 				</div>
